# piv_game

./: README.md
devfacecom_gh/: .gitlab-ci.yml  .yml  README.md  check_directories.sh  config.toml  firebase.json  go.mod  index copy.html  package-lock.json  package.json  package.json  
devfacecom_gh/.firebase/: hosting.cHVibGlj.cache
devfacecom_gh/Back/.firebase/: firebasePage.html
devfacecom_gh/Back/cmd/server/: main.go
devfacecom_gh/Back/internal/api/: routes.go
devfacecom_gh/Back/internal/api/handlers/: auth.go  beer.go
devfacecom_gh/Back/internal/api/middleware/: auth.go
devfacecom_gh/Back/internal/config/: config.go
devfacecom_gh/Back/internal/domain/: beer.go  user.go
devfacecom_gh/Back/internal/pkg/logger/: logger.go
devfacecom_gh/Back/internal/repository/: repository.go
devfacecom_gh/Back/internal/repository/csv/: beer_repository.go  user_repository.go
devfacecom_gh/Back/internal/usecase/: auth.go  beer.go
devfacecom_gh/Back/internal/utils/: csv.go  validator.go
devfacecom_gh/Front/js/: firebase-config.js  game_script.js
devfacecom_gh/Front/public/: pipeline_status.html
devfacecom_gh/Front/public/css/: style.css
devfacecom_gh/Sec_Back/: .yml  Read Me  port_checker.cpp
devfacecom_gh/Sec_Back/REST_API/: .cpp
devfacecom_gh/css/: style.css
devfacecom_gh/dataconnect/: dataconnect.yaml
devfacecom_gh/js/: app.js  script.js
devfacecom_gh/public/: greeting.html  index.html  main_game.html
devfacecom_gh/public/css/: game_styles.css
devfacecom_gh/sec/sec/: CMakeLists.txt  main.cpp
